# filesharing

./: .gitignore  Cargo.toml
src/: main.rs
templates/: download.html.tera  upload.html.tera
