[package]
name = "filesharing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "^0.5.0-rc.2"
uuid = {version = "1.1.2", features = ["v4"]}
rocket_dyn_templates = {version = "0.1.0-rc.2", features = ["tera"]}